Description: advertising code
Match-id-528569feccb62444c1db28d8ec0f3b0e96fdb055

--- a/services/advertising_manager/resource/ad_service_config.json
+++ b/services/advertising_manager/resource/ad_service_config.json
@@ -1,5 +1,6 @@
 {
-    "providerBundleName": [],
-    "providerAbilityName": [],
-    "providerUEAAbilityName": []
+    "providerBundleName": [""],
+    "providerAbilityName": [""],
+    "providerUIAbilityName": [""],
+    "providerUEAAbilityName": [""]
 }
