Description: show add bug fix
Match-id-434402e572bdeab3766bedfd70d47dd5702eacf0

--- a/services/advertising_manager/resource/ad_service_config.json
+++ b/services/advertising_manager/resource/ad_service_config.json
@@ -1,6 +1,6 @@
 {
-    "providerBundleName": [""],
-    "providerAbilityName": [""],
-    "providerUIAbilityName": [""],
-    "providerUEAAbilityName": [""]
+    "providerBundleName": ["com.huawei.hms.hmscore"],
+    "providerAbilityName": ["AdsCoreService"],
+    "providerUIAbilityName": ["FullScreenAdAbility"],
+    "providerUEAAbilityName": ["AdsUIExtensionAbility"]
 }
