Description:add auto refresh component
Match-id-07066d50a182d44f1f8dab2ee59402ded11ad43e

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -19,6 +19,7 @@ group("advertising_native_packages") {
       "interfaces/kits/js:advertising",
       "frameworks/js/napi/ads:advertising",
       "frameworks/js/napi/adcomponent:adcomponent",
+      "frameworks/js/napi/autoadcomponent:autoadcomponent",
       "sa_profile:cloud_advertising_sa_profiles",
       "services:advertising_service",
       "services:ad_service_config_json",
