--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -11,26 +11,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//build/ohos.gni")
-import("//domains/cloud/advertising/advertising.gni")
-
-group("advertising_native_packages") {
-    deps = [
-      "etc/init:advertisingservice.cfg",
-      "interfaces/kits/js:advertising",
-      "frameworks/js/napi/ads:advertising",
-      "frameworks/js/napi/adcomponent:adcomponent",
-      "frameworks/js/napi/autoadcomponent:autoadcomponent",
-      "sa_profile:cloud_advertising_sa_profiles",
-      "services:advertising_service",
-      "services:ad_service_config_json",
-    ]
-}
-
-group("ad_build_fuzztest") {
+group("fuzztest") {
   testonly = true
   deps = []
+
   deps += [
-    "${advertising_root_path}/test/fuzztest:fuzztest"
+    # deps file
+    "advertising_fuzzer:AdvertisingFuzzTest"
   ]
 }
