修改子系统为advertising
Signed-off-by: chenshuai <chenshuai3@huawei.com>

--- a/frameworks/js/napi/adcomponent/BUILD.gn
+++ b/frameworks/js/napi/adcomponent/BUILD.gn
@@ -37,6 +37,6 @@ ohos_shared_library("adcomponent") {
   external_deps = [ "napi:ace_napi" ]
 
   relative_install_dir = "module/cloud"
-  subsystem_name = "cloud"
+  subsystem_name = "advertising"
   part_name = "advertising"
 }
