--- a/etc/init/BUILD.gn
+++ b/etc/init/BUILD.gn
@@ -17,5 +17,5 @@ ohos_prebuilt_etc("advertisingservice.cfg") {
   source = "advertisingservice.cfg"
   relative_install_dir = "init"
   part_name = "advertising"
-  subsystem_name = "cloud"
+  subsystem_name = "advertising"
 }
