--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -20,7 +20,7 @@ config("native_module_config") {
   visibility = [ ":*" ]
 
   include_dirs = [
-    "${advertising_common_path}/ipc/include"
+    "${advertising_common_path}/ipc/include",
   ]
 
   if (target_cpu == "arm") {
@@ -34,7 +34,6 @@ config("native_module_config") {
 ohos_shared_library("advertising") {
   include_dirs = [
     "${advertising_service_path}/ipc/include",
-    "//domains/cloud/advertising/services/advertising_manager/include",
     "//domains/cloud/advertising/common/error_code",
     "//domains/cloud/advertising/common/log/include",
     "//domains/cloud/advertising/common/utils/include",
@@ -42,6 +41,12 @@ ohos_shared_library("advertising") {
     "//domains/cloud/advertising/common/model/include",
     "./include",
   ]
+
+  sanitize = {
+    boundary_sanitize = true
+    integer_overflow = true
+    ubsan = true
+  }
 
   configs = [ ":native_module_config"]
 
@@ -52,8 +57,8 @@ ohos_shared_library("advertising") {
   ]
 
   deps = [
-    "${advertising_service_path}:advertising_service",
     "${advertising_common_path}:advertising_common",
+    "${advertising_inner_path}:ads_inner",
     "//third_party/libuv:uv_static",
     "//third_party/jsoncpp:jsoncpp",
   ]
