适配修改FUZZ用例
Signed-off-by: zhongliyu <zhongliyu@huawei.com>

--- a/test/fuzztest/advertising_fuzzer/BUILD.gn
+++ b/test/fuzztest/advertising_fuzzer/BUILD.gn
@@ -16,7 +16,7 @@ import("//domains/cloud/advertising/advertising.gni")
 #####################hydra-fuzz###################
 import("//build/config/features.gni")
 import("//build/test.gni")
-module_output_path = "cloud/advertising"
+module_output_path = "advertising/advertising"
 
 ##############################fuzztest##########################################
 ohos_fuzztest("AdvertisingFuzzTest") {
