--- a/frameworks/js/napi/autoadcomponent/BUILD.gn
+++ b/frameworks/js/napi/autoadcomponent/BUILD.gn
@@ -36,7 +36,7 @@ ohos_shared_library("autoadcomponent") {
 
   external_deps = [ "napi:ace_napi" ]
 
-  relative_install_dir = "module/cloud"
+  relative_install_dir = "module/advertising"
   subsystem_name = "advertising"
   part_name = "advertising"
 }
