Description: update compile file and readme Feature or Bugfix: feature Binary Source: NO Signed-off-by: xiangjiang <xiangjiang@huawei.com>

--- a/advertising.gni
+++ b/advertising.gni
@@ -25,5 +25,4 @@ ability_base_path = "//foundation/ability/ability_base"
 
 ability_base_kits_path = "${ability_base_path}/interfaces/kits/native"
 
-
-
+ability_runtime_path = "//foundation/ability/ability_runtime"
