Description: update ad config file Feature or Bugfix: feature Binary Source: NO Signed-off-by: xiangjiang <xiangjiang@huawei.com>

--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -101,7 +101,7 @@ ohos_shared_library("advertising") {
 
 ohos_prebuilt_etc("ad_service_config_json") {
   source = "resource/ad_service_config.json"
-  relative_install_dir = "cloud/advertising"
+  relative_install_dir = "advertising/ads_framework"
   part_name = "advertising"
   subsystem_name = "advertising"
 }
