--- a/common/BUILD.gn
+++ b/common/BUILD.gn
@@ -28,6 +28,13 @@ config("common_config") {
 ohos_source_set("advertising_common") {
   configs = [ ":common_config" ]
 
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+    blocklist = "../cfi_blocklist.txt"
+  }
+
   sources = [
     "ipc/src/ad_load_callback_stub.cpp",
     "ipc/src/ad_load_proxy.cpp",
