--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -50,6 +50,8 @@ config("native_module_config") {
 }
 
 ohos_shared_library("advertising") {
+  branch_protector_ret = "pac_ret"
+
   include_dirs = [
     "//domains/advertising/advertising/common/error_code",
     "//domains/advertising/advertising/common/log/include",
@@ -60,6 +62,10 @@ ohos_shared_library("advertising") {
   ]
 
   sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+    blocklist = "../../../../cfi_blocklist.txt"
     boundary_sanitize = true
     integer_overflow = true
     ubsan = true
