--- a/frameworks/js/napi/autoadcomponent/BUILD.gn
+++ b/frameworks/js/napi/autoadcomponent/BUILD.gn
@@ -11,25 +11,38 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
 import("//build/ohos.gni")
 import("//foundation/arkui/ace_engine/ace_config.gni")
-import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
 
 es2abc_gen_abc("gen_autoadcomponent_abc") {
   src_js = rebase_path("autoadcomponent.js")
   dst_file = rebase_path(target_out_dir + "/autoadcomponent.abc")
   in_puts = [ "autoadcomponent.js" ]
   out_puts = [ target_out_dir + "/autoadcomponent.abc" ]
-  extra_args = [ "--module" ]  
+  extra_args = [ "--module" ]
 }
 
 gen_js_obj("autoadcomponent_abc") {
-  input = get_label_info(":gen_autoadcomponent_abc", "target_out_dir") + "/autoadcomponent.abc"
+  input = get_label_info(":gen_autoadcomponent_abc", "target_out_dir") +
+          "/autoadcomponent.abc"
   output = target_out_dir + "/autoadcomponent_abc.o"
   dep = ":gen_autoadcomponent_abc"
 }
 
 ohos_shared_library("autoadcomponent") {
+  branch_protector_ret = "pac_ret"
+
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+    blocklist = "../../../../cfi_blocklist.txt"
+    boundary_sanitize = true
+    integer_overflow = true
+    ubsan = true
+  }
+
   sources = [ "autoadcomponent.cpp" ]
 
   deps = [ ":autoadcomponent_abc" ]
