Description: 广告增加前向后向CFI Feature or Bugfix: feature Binary Source: NO Signed-off-by: xiangjiang <xiangjiang@huawei.com>

--- a/frameworks/js/napi/extension/BUILD.gn
+++ b/frameworks/js/napi/extension/BUILD.gn
@@ -56,7 +56,7 @@ ohos_shared_library("libadsservice_extension") {
 
   include_dirs = [
     "./include",
-    "//domains/advertising/advertising/common/log/include",
+    "${advertising_common_path}/log/include",
   ]
 
   external_deps = [
@@ -109,7 +109,7 @@ ohos_shared_library("adsservice_extension_module") {
 
   include_dirs = [
     "./include",
-    "//domains/advertising/advertising/common/log/include",
+    "${advertising_common_path}/log/include",
   ]
 
   external_deps = [
