add bundle_framework dependency
Signed-off-by: 张欣宇 <zhangxinyu74@huawei.com>
Change-Id: I990fd8ec48d5993c9f3ef9c352cc140352c85df8

--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -91,6 +91,7 @@ ohos_shared_library("advertising") {
   external_deps = [
     "ability_runtime:ability_manager",
     "ability_runtime:abilitykit_native",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "config_policy:configpolicy_util",
     "hilog:libhilog",
