--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -59,6 +59,7 @@ ohos_shared_library("advertising") {
     "//domains/advertising/advertising/common/ipc/include",
     "//domains/advertising/advertising/common/model/include",
     "./include",
+    "//third_party/cJSON",
   ]
 
   sanitize = {
@@ -84,7 +85,7 @@ ohos_shared_library("advertising") {
     ":advertising_abc",
     ":advertising_js",
     "${advertising_common_path}:advertising_common",
-    "//third_party/jsoncpp:jsoncpp",
+    "//third_party/cJSON:cjson",
     "//third_party/libuv:uv_static",
   ]
 
