--- a/common/BUILD.gn
+++ b/common/BUILD.gn
@@ -42,12 +42,11 @@ ohos_source_set("advertising_common") {
     "utils/src/ad_json_util.cpp",
   ]
 
-  deps = [ "//third_party/cJSON:cjson" ]
-
   external_deps = [
     "ability_base:want",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
+    "cJSON:cjson",
     "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
