Description: 插屏广告适配UEA Feature or Bugfix: feature Binary Source: NO
Signed-off-by: qiuxiangyu123 <360846370@qq.com>

--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -13,6 +13,7 @@
 
 import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
 import("//build/ohos.gni")
+import("//build/ohos/ace/ace.gni")
 import("//domains/advertising/advertising/advertising.gni")
 
 es2abc_gen_abc("gen_advertising_abc") {
@@ -90,12 +91,15 @@ ohos_shared_library("advertising") {
   external_deps = [
     "ability_runtime:ability_manager",
     "ability_runtime:abilitykit_native",
+    "ability_runtime:ability_context_native",
+    "ability_runtime:napi_base_context",
     "bundle_framework:appexecfwk_core",
     "cJSON:cjson",
     "c_utils:utils",
     "config_policy:configpolicy_util",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "ace_engine:ace_uicontent",
     "napi:ace_napi",
   ]
 
