Description: js bridge接口功能 Feature or Bugfix: feature Binary Source: NO
Signed-off-by: chenshuai <chenshuai3@huawei.com>

--- a/frameworks/js/napi/ads/resource/ad_service_config.json
+++ b/frameworks/js/napi/ads/resource/ad_service_config.json
@@ -6,5 +6,7 @@
     "_comment3":"page name displaying full screen ads, such as rewarded ads",
     "providerUIAbilityName": ["FullScreenAdAbility"],
     "_comment4":"page name displaying native ads",
-    "providerUEAAbilityName": ["AdsUIExtensionAbility"]
+    "providerUEAAbilityName": ["AdsUIExtensionAbility"],
+    "_comment5":"js brigde ability",
+    "providerJSAbilityName": ["JsBridgeService"]
 }
