--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -77,6 +77,7 @@ ohos_shared_library("advertising") {
     "src/ad_init.cpp",
     "src/ad_load_napi_common.cpp",
     "src/ad_load_service.cpp",
+    "src/ad_napi_common_error.cpp",
     "src/advertising.cpp",
   ]
 
