--- a/common/BUILD.gn
+++ b/common/BUILD.gn
@@ -25,6 +25,8 @@ config("common_config") {
 }
 
 ohos_source_set("advertising_common") {
+  branch_protector_ret = "pac_ret"
+
   configs = [ ":common_config" ]
 
   sanitize = {
