--- a/frameworks/js/napi/ads/BUILD.gn
+++ b/frameworks/js/napi/ads/BUILD.gn
@@ -85,7 +85,6 @@ ohos_shared_library("advertising") {
     ":advertising_abc",
     ":advertising_js",
     "${advertising_common_path}:advertising_common",
-    "//third_party/libuv:uv_static",
   ]
 
   external_deps = [
@@ -103,6 +102,9 @@ ohos_shared_library("advertising") {
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "samgr:samgr_proxy",
+    "safwk:system_ability_fwk",
+    "libuv:uv_static",
   ]
 
   relative_install_dir = "module"
