--- a/common/BUILD.gn
+++ b/common/BUILD.gn
@@ -55,4 +55,5 @@ ohos_source_set("advertising_common") {
     "samgr:samgr_proxy",
   ]
   part_name = "advertising"
+  subsystem_name = "advertising"
 }
